...
    <string name="email_label">Email</string>
    <string name="profile">Profile</string>
    <string name="bio_label">Bio</string>
    <string name="user_followers_label">Followers</string>
    <string name="user_following_label">Following</string>
    // Buttons
    <string name="repository_more_on_owner">More on owner</string>
    <string name="repository_inspect_in_browser">Open repository in browser</string>
    <string name="owner_inspect_in_browser">Open owner in browser</string>
    <string name="user_inspect_in_browser">Open profile in browser</string>
    <string name="authenticate_user">Continue with GitHub</string>
    <string name="logout">Logout</string>
    <string name="continue_without_authentication">Continue without authentication</string>
    // Loading dialog messages
    <string name="loading_dialog_search_repository">Loading repositories</string>
    <string name="loading_more_repositories">Loading more repositories</string>
    <string name="loading_new_repositories">Loading new repositories</string>
...
